* Thu Jan 09 2014 Ding-Yi Chen <dchen at redhat.com> - 1.2.3
- Resolves Bug 1040333 - RFE: Suiport .gitignore file as 
  source of CPACK_SOURCE_IGNORE_FILES
- Resolves Bug 1046213 - RFE: RPM ChangeLog should be generated by 
  newest build from koji 
- Enhancement:
  + ChangeLog.prev is no longer required.
  + RPM-ChangeLog.prev is provide by koji now.
  + cmake-fedora-koji: 
    - new subcommand: newest-build and newest-changelog.
  + cmake-fedora-changelog: new script. 
  + New targets:
    - tag_push: Push to git.
  + ManageFile:
    - Add absolute file support
    - MANAGE_FILE_INSTALL: Add TARGETS support.
    - MANAGE_FILE_INSTALL: Add RENAME support.
    - GIT_GLOB_TO_CMAKE_REGEX: Convert git glob to cmake regex
  + ManageArchive:
    - PACK_SOURCE_CPACK: Pack with CPack
    - PACK_SOURCE_ARCHIVE: Now can specify OUTPUT_FILE.
    - SOURCE_ARCHIVE_CONTENTS_ADD: Add file to source archive.
    - SOURCE_ARCHIVE_CONTENTS_ADD_NO_CHECK: 
      Add file to source archive without checking.
    + ManageDependency: Manage dependencies.
  + ManageRPM: 
    - PACK_RPM: New options: SPEC_IN and SPEC.
    - RPM_SPEC_STRING_ADD: Add a string to SPEC string.
    - RPM_SPEC_STRING_ADD_DIRECTIVE: Add a directive to SPEC string.
    - RPM_SPEC_STRING_ADD_TAG: Add a string to SPEC string.
  + ManageString:
    - STRING_APPEND: Append a string to a variable.
    - STRING_PADDING: Padding the string to specified length
    - STRING_PREPEND: Prepend a string to a variable.
  + ManageTranslation:
    - MANAGE_GETTEXT: 
      + Can specify MSGFMT_OPTIONS and MSGMERGE_OPTIONS
      + Add gettext-devel to BUILD_REQUIRES.
  + ManageVariable:
    - VARIABLE_TO_ARGN: Merge the variable and options to 
      the form of ARGN.
  + Cached variables:
    - RPM_SPEC_CMAKE_FLAG: cmake flags in rpm build.
    - RPM_SPEC_MAKE_FLAG: make flags in rpm build.
    - Changed Modules:
  + ManageArchive:
    - PACK_SOURCE_ARCHIVE: Can now pass either 
      empty, outputDir, or source File. 